[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://tests/test-results-window/test-results-window.gd" id="1"]

[node name="TestResultsWindow" type="Window"]
title = "Test Results - FAILURES DETECTED"
initial_position = 2
size = Vector2(800, 600)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "⚠️ Unit Test Failures Detected"

[node name="SummaryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Summary: 0 tests run"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsText" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Test results will appear here..."

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Continue Anyway"

[node name="ExitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Exit Application"
